--- a/package.json
+++ b/package.json
@@ -2,7 +2,24 @@
   "name": "react-standardapi",
   "version": "1.0.0",
   "description": "A React library for querying a Rails application through StandardAPI.",
-  "main": "index.js",
+  "main": "build/index.js",
   "author": "Will Laeri",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "v10.15.1",
+    "yarn": "1.13.0"
+  },
+  "scripts": {
+    "build": "babel src -d build",
+    "prepack": "yarn build"
+  },
+  "dependencies": {
+    "react": "^16.12.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3"
+  }
 }
