--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "prepack": "yarn build"
   },
   "dependencies": {
-    "react": "^16.12.0"
+    "invariant": "^2.2.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "standardapi-client": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3"
   }
