--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "plugins": ["@babel/proposal-class-properties"],
+  "plugins": ["@babel/plugin-transform-runtime", "@babel/proposal-class-properties"],
   "presets": ["@babel/preset-react", "@babel/preset-env"]
 }
