--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "invariant": "^2.2.4",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "standardapi-client": "^1.0.0"
+    "react": "^16.12.0"
+  },
+  "peerDependencies": {
+    "standardapi-client": "^1.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
