--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "prepack": "yarn build"
   },
   "dependencies": {
-    "invariant": "^2.2.4",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0"
+    "invariant": "^2.2.4"
   },
   "peerDependencies": {
-    "standardapi-client": "^1.0.2"
+    "standardapi-client": "^1.0.2",
+    "react": "^16.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -29,6 +28,8 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
-    "@babel/runtime": "^7.8.4"
+    "@babel/runtime": "^7.8.4",
+    "react": "^16.12.0",
+    "prop-types": "^15.7.2"
   }
 }
