--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-standardapi",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A React library for querying a Rails application through StandardAPI.",
   "main": "build/index.js",
   "author": "Will Laeri",
@@ -11,14 +11,17 @@
   },
   "scripts": {
     "build": "babel src -d build",
-    "prepack": "yarn build"
+    "prepack": "yarn build",
+    "test": "jest --config tests/jest.config.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "dependencies": {
     "invariant": "^2.2.4"
   },
   "peerDependencies": {
-    "standardapi-client": "^1.0.2",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "standardapi-client": "^1.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -29,7 +32,14 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/runtime": "^7.8.4",
+    "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest": "^25.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "prop-types": "^15.7.2"
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
+    "standardapi-client": "^1.0.3"
   }
 }
